--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button class="hero_btn">Learn more</button>
         </div>
         <img src="/img/image-hero.webp" alt="smart phone" class="hero-img" />
-        <div class="custom-shape-divider">
+        <div class="custom-shape-divider hero-wave">
           <svg
             data-name="Layer 1"
             xmlns="http://www.w3.org/2000/svg"
@@ -85,7 +85,7 @@
               </p>
             </div>
           </div>
-          <div class="custom-shape-divider-main">
+          <div class="custom-shape-divider-main hero-wave">
             <svg
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
